# cc-buddy-bridge

./: .gitignore  README.ja.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: test.yml
src/cc_buddy_bridge/: __init__.py  _service_windows.py  audit.py  ble.py  cli.py  daemon.py  hud.py  installer.py  ipc.py  jsonl_tailer.py  matchers.py  notifier.py  pricing.py  protocol.py  service.py  state.py
src/cc_buddy_bridge/hooks/: __init__.py  _client.py  posttooluse.py  pretooluse.py  session_end.py  session_start.py  stop.py  user_prompt_submit.py
tests/: test_audit.py  test_hud.py  test_installer.py  test_jsonl_tailer.py  test_matchers.py  test_pricing.py  test_protocol.py  test_service.py  test_state.py
