[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-buddy-bridge"
version = "0.1.0"
description = "Bridge Claude Code CLI sessions to the claude-desktop-buddy BLE hardware (bypasses the desktop app)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Snow" }]
requires-python = ">=3.11"
keywords = ["claude-code", "ble", "hardware-buddy", "m5stick", "esp32"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "bleak>=0.22",
    "watchfiles>=0.21",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
cc-buddy-bridge = "cc_buddy_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
# Start narrow: catch real correctness/cleanliness issues without arguing about
# style. Pyflakes (F) covers unused/undefined names; pycodestyle errors (E) catch
# syntax issues; isort (I) keeps imports tidy. Add more rule sets later if they
# pay off.
select = ["F", "E", "W", "I", "B"]
ignore = [
    "E501",  # line too long — line-length is advisory; lots of long log strings on purpose
    "B008",  # function call in argument default — used intentionally for Path() defaults
]
